--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     justify-content: center;
     color: #333;
     padding: 20px;
-    padding-top: 25vh;
+    padding-top: 15vh; /* Reduced from 25vh to 15vh for smaller window */
     -webkit-app-region: no-drag;
 }
 
